istio/web-test/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server
        image: rwxproject/basnodeexp
        ports:
        - containerPort: 3000
