istio/web-test/server-cluster-ip-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: server-cluster-ip-service
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
  - port: 3000
    targetPort: 3000
